# utils_tool

cbc_demo/: CMakeLists.txt  Readme.md  main.cpp
cbc_demo/model/: test_mip1.lp  test_mip1.mps  test_mip2.lp  test_mip2.mps
cplex_demo/: CMakeLists.txt  main.cpp
cplex_py_demo/: main.py  utils.py
gurobi_demo/: CMakeLists.txt  main.cpp
gurobi_demo/data/input_model/: test.lp
gurobi_demo/data/output_model/: test.lp  test.mps
gurobi_py_demo/: main.py
